--- a/src/main/java/com/github/hinaser/gfma/settings/ApplicationSettingsComponent.form
+++ b/src/main/java/com/github/hinaser/gfma/settings/ApplicationSettingsComponent.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="507" height="400"/>
+      <xy x="20" y="20" width="733" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -58,7 +58,7 @@
         </constraints>
         <properties/>
       </component>
-      <grid id="41d36" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="41d36" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -73,23 +73,10 @@
             <properties>
               <enabled value="true"/>
               <selected value="false"/>
-              <text value=""/>
+              <text value="Parse markdown by Github Markdown API. * This option requires internet access. "/>
               <toolTipText value="If checked offline generation will be used. Note that if platform is not supported GitHub API will be used."/>
             </properties>
           </component>
-          <component id="67de9" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="* This option requires internet access."/>
-            </properties>
-          </component>
-          <hspacer id="389db">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </hspacer>
         </children>
       </grid>
       <component id="19f0a" class="javax.swing.JLabel">
