--- a/src/main/java/com/github/hinaser/gfma/settings/ApplicationSettingsComponent.form
+++ b/src/main/java/com/github/hinaser/gfma/settings/ApplicationSettingsComponent.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.github.hinaser.gfma.settings.ApplicationSettingsComponent">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="733" height="400"/>
@@ -19,7 +19,7 @@
       </component>
       <vspacer id="9e3d5">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="62fac" class="javax.swing.JLabel">
@@ -145,6 +145,22 @@
           </component>
         </children>
       </grid>
+      <component id="f6dac" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Show parser info"/>
+        </properties>
+      </component>
+      <component id="34b71" class="javax.swing.JCheckBox" binding="showActiveParserCheckBox">
+        <constraints>
+          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Show markdown parser info. If parser is Github Markdown API, also show status of access token."/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
