--- a/src/main/java/com/github/hinaser/gfma/settings/ApplicationSettingsComponent.form
+++ b/src/main/java/com/github/hinaser/gfma/settings/ApplicationSettingsComponent.form
@@ -27,7 +27,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Github access token"/>
+          <text value="GitHub access token"/>
         </properties>
       </component>
       <component id="282bc" class="javax.swing.JLabel">
@@ -66,15 +66,15 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="6f7a8" class="javax.swing.JCheckBox" binding="useGithubMarkdownAPICheckBox">
+          <component id="6f7a8" class="javax.swing.JCheckBox" binding="useGitHubMarkdownAPICheckBox">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <enabled value="true"/>
               <selected value="false"/>
-              <text value="Parse markdown by Github Markdown API. * This option requires internet access. "/>
-              <toolTipText value="If checked offline generation will be used. Note that if platform is not supported GitHub API will be used."/>
+              <text value="Parse markdown by GitHub Markdown API. * This option requires internet access. "/>
+              <toolTipText value="&lt;html&gt;&#10;If unchecked, offline markdown parser will be used instead of GitHub Markdown API.&lt;br/&gt;&#10;The offline parser uses &lt;i&gt;flexmark-java&lt;/i&gt;.&lt;br/&gt;&#10;Please note it may not parse markdown as well as GitHub Markdown API does.&#10;&lt;/html&gt;"/>
             </properties>
           </component>
         </children>
@@ -84,7 +84,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Use Github Markdown API"/>
+          <text value="Use GitHub Markdown API"/>
           <toolTipText value="*Requires internet connection"/>
         </properties>
       </component>
@@ -109,7 +109,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Not required but you can Increase Github Markdown API rate limit"/>
+              <text value="Not required but you can Increase GitHub Markdown API rate limit"/>
             </properties>
           </component>
         </children>
@@ -158,7 +158,7 @@
           <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Show markdown parser info. If parser is Github Markdown API, also show status of access token."/>
+          <text value="Show markdown parser info. If parser is GitHub Markdown API, also show status of access token."/>
         </properties>
       </component>
     </children>
